--- a/Santas Site.html
+++ b/Santas Site.html
@@ -92,7 +92,7 @@
       <div class="thumbnail"> <img src="img/600X300.gif" alt="Thumbnail Image 1" class="img-responsive">
         <div class="caption">
           <h3>Naughty </h3>
-          <p>Lorem ipsum dolorTrevor sit amet, consectetur adipisicing elit. Deserunt, at.</p>
+          
           <hr>
           <p><a href="#" class="btn btn-danger" role="button">Naughty</a></p>
         </div>
@@ -102,38 +102,13 @@
       <div class="thumbnail"> <img src="img/600X300.gif" alt="Thumbnail Image 1" class="img-responsive">
         <div class="caption">
           <h3>Nice</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, atque.</p>
+          <p> elit. Excepturi, atque.</p>
           <hr>
           <p><a href="#" class="btn btn-success" role="button">Nice</a></p>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div class="container">
-  <div class="row">
-<hr>
-<div class="col-sm-6 col-lg-12">
-      <div class="panel panel-default panel-warning"> 
-        <!-- Default panel contents -->
-        <div class="panel-heading">
-          <h3>Biography </h3>
-        </div>
-        <!-- Table -->
-        <table class="table">
-          <thead>
-            <tr> </tr>
-          </thead>
-        </table>
-        Santa Claus, also known as Saint Nicholas, Kris Kringle, Father Christmas, or simply Santa, is a legendary figure originating in Western Christian culture who is said to bring gifts to the homes of well-behaved children on Christmas Eve and the early morning hours of Christmas Day.There was a poor man who had three daughters. The man was so poor that he did not have enough money for a dowry, so his daughters couldn't get married. (A dowry is a sum of money paid to the bridegroom by the brides parents on the wedding day. This still happens in some countries, even today.) One night, Nicholas secretly dropped a bag of gold down the chimney and into the house (This meant that the oldest daughter was then able to be married.). The bag fell into a stocking that had been hung by the fire to dry! This was repeated later with the second daughter. Finally, determined to discover the person who had given him the money, the father secretly hid by the fire every evening until he caught Nicholas dropping in a bag of gold. Nicholas begged the man to not tell anyone what he had done, because he did not want to bring attention to himself. But soon the news got out and when anyone received a secret gift, it was thought that maybe it was from Nicholas
-        <table class="table">
-          <thead>
-            <tr> </tr>
-          </thead>
-        </table>
-      </div>
-    </div>
-</div>
 </div>
 <hr>
 <div class="container">
@@ -152,17 +127,17 @@
     <div class="col-lg-4 col-md-6 col-sm-6">
       <h2>Testimonials</h2>
       <div class="media">
-        <div class="media-left"> <a href="#"> <img class="media-object" src="img/35X35.gif" alt="..."> </a> </div>
+        <div class="media-left"> <span style="color: #FFFFFF"><a href="#"> <img class="media-object" src="img/35X35.gif" alt="..."> </a> </span></div>
         <div class="media-body">
           <h4 class="media-heading">It's true!!</h4>
-          My big brother was convinced that Santa wasn't real but I just couldn't buy it. so I wrote him a letter and on christmas I got everything I asked for I'm officially a true believer. </div>
+          <span style="color: #FFFFFF">          My big brother was convinced that Santa wasn't real but I just couldn't buy it. so I wrote him a letter and on christmas I got everything I asked for I'm officially a true believer. </span></div>
       </div>
       <div class="media">
-        <div class="media-left"> <a href="#"> <img class="media-object" src="img/35X35.gif" alt="..."> </a> </div>
+        <div class="media-left"> <span style="color: #FFFFFF"><a href="#"> <img class="media-object" src="img/35X35.gif" alt="..."> </a> </span></div>
         <div class="media-body">
           <h4 class="media-heading">Thanks Santa !</h4>
           <p>Dear Santa, Thanks for bringing just what I wanted.</p>
-          <p>Love, Diana </p>
+          <p>Love, Diana</p>
         </div>
       </div>
     </div>
